@@ -81,6 +81,12 @@ To be installed with the Solaris installer.
 </li>
 
 <li>
+Binary for <b>Intel Solaris Express/OpenSolaris/Solaris 11</b> systems:
+<a href="http://www.zimmers.net/anonftp/pub/cbm/crossplatform/emulators/VICE/vice-2.0-sol11-x86-local.gz">vice-2.0-sol11-x86-local.gz</a>.
+To be installed with the Solaris installer.
+</li>
+
+<li>
 Binary for <b>Sparc Solaris 2.6</b> systems:
 <a href="http://www.zimmers.net/anonftp/pub/cbm/crossplatform/emulators/VICE/vice-2.0-sol26-sparc-local.gz">vice-2.0-sol26-sparc-local.gz</a>.
 To be installed with the Solaris installer.
