@@ -21,6 +21,10 @@ list of all the changes in the code.
 
 - New SkyOS port.
 
+- New Atari Mint port.
+
+- New Solaris Express aka OpenSolaris aka Solaris 11 port.
+
 ** C64/C128 changes
 -------------------
 
